--- a/RadiusR.API.CustomerWebService/packages.config
+++ b/RadiusR.API.CustomerWebService/packages.config
@@ -14,28 +14,28 @@
   <package id="NLog" version="4.7.6" targetFramework="net472" />
   <package id="OpenPop.NET" version="2.0.6.1120" targetFramework="net472" />
   <package id="Portable.BouncyCastle" version="1.8.5" targetFramework="net472" />
-  <package id="RadiusR.Address" version="1.0.0" targetFramework="net472" />
-  <package id="RadiusR.Address.QueryInterface" version="1.0.0" targetFramework="net472" />
-  <package id="RadiusR.API.AddressQueryAdapter" version="1.0.0" targetFramework="net472" />
-  <package id="RadiusR.API.MobilExpress.DBAdapter" version="1.0.0" targetFramework="net472" />
-  <package id="RadiusR.DB" version="1.2.3" targetFramework="net472" />
-  <package id="RadiusR.DB.DomainsCache" version="1.1.0" targetFramework="net472" />
-  <package id="RadiusR.DB.TelekomOperations" version="1.0.0" targetFramework="net472" />
-  <package id="RadiusR.DB.Utilities" version="1.1.0" targetFramework="net472" />
-  <package id="RadiusR.DB.Utilities.ComplexOperations" version="1.0.7" targetFramework="net472" />
-  <package id="RadiusR.FileManagement" version="1.1.4" targetFramework="net472" />
-  <package id="RadiusR.Localization" version="1.0.4" targetFramework="net472" />
-  <package id="RadiusR.Localization.Lists" version="1.0.9" targetFramework="net472" />
-  <package id="RadiusR.PDFForms" version="1.0.1" targetFramework="net472" />
-  <package id="RadiusR.Scheduler.SMS" version="1.0.0" targetFramework="net472" />
-  <package id="RadiusR.SMS" version="1.0.0" targetFramework="net472" />
-  <package id="RadiusR.SystemLogs" version="1.0.3" targetFramework="net472" />
-  <package id="RadiusR.VPOS" version="1.0.2" targetFramework="net472" />
-  <package id="RezaB.API.MobilExpress" version="1.0.0" targetFramework="net472" />
-  <package id="RezaB.API.TCKValidation" version="1.0.0" targetFramework="net472" />
+  <package id="RadiusR.Address" version="1.0.1" targetFramework="net472" />
+  <package id="RadiusR.Address.QueryInterface" version="1.0.1" targetFramework="net472" />
+  <package id="RadiusR.API.AddressQueryAdapter" version="1.0.1" targetFramework="net472" />
+  <package id="RadiusR.API.MobilExpress.DBAdapter" version="1.0.1" targetFramework="net472" />
+  <package id="RadiusR.DB" version="1.2.4" targetFramework="net472" />
+  <package id="RadiusR.DB.DomainsCache" version="1.1.1" targetFramework="net472" />
+  <package id="RadiusR.DB.TelekomOperations" version="1.1.0" targetFramework="net472" />
+  <package id="RadiusR.DB.Utilities" version="1.1.1" targetFramework="net472" />
+  <package id="RadiusR.DB.Utilities.ComplexOperations" version="1.1.2" targetFramework="net472" />
+  <package id="RadiusR.FileManagement" version="1.1.6" targetFramework="net472" />
+  <package id="RadiusR.Localization" version="1.0.6" targetFramework="net472" />
+  <package id="RadiusR.Localization.Lists" version="1.0.11" targetFramework="net472" />
+  <package id="RadiusR.PDFForms" version="1.0.2" targetFramework="net472" />
+  <package id="RadiusR.Scheduler.SMS" version="1.0.1" targetFramework="net472" />
+  <package id="RadiusR.SMS" version="1.0.1" targetFramework="net472" />
+  <package id="RadiusR.SystemLogs" version="1.0.7" targetFramework="net472" />
+  <package id="RadiusR.VPOS" version="1.0.3" targetFramework="net472" />
+  <package id="RezaB.API.MobilExpress" version="1.0.1" targetFramework="net472" />
+  <package id="RezaB.API.TCKValidation" version="1.0.1" targetFramework="net472" />
   <package id="RezaB.API.WebService" version="1.1.7" targetFramework="net472" />
   <package id="RezaB.API.WebService.NLogExtentions" version="1.0.1" targetFramework="net472" />
-  <package id="RezaB.Data" version="1.0.1" targetFramework="net472" />
+  <package id="RezaB.Data" version="1.0.2" targetFramework="net472" />
   <package id="RezaB.DBUtilities" version="1.0.0" targetFramework="net472" />
   <package id="RezaB.Files" version="1.0.1" targetFramework="net472" />
   <package id="RezaB.Files.FTP" version="1.0.2" targetFramework="net472" />
@@ -43,8 +43,9 @@
   <package id="RezaB.Mailing" version="1.0.1" targetFramework="net472" />
   <package id="RezaB.NetInvoice" version="1.0.0" targetFramework="net472" />
   <package id="RezaB.NetInvoice.Wrapper" version="1.0.0" targetFramework="net472" />
-  <package id="RezaB.TurkTelekom.WebServices" version="1.1.0" targetFramework="net472" />
-  <package id="RezaB.Web.VPOS" version="1.1.1" targetFramework="net472" />
+  <package id="RezaB.TurkTelekom.FTPOperations" version="1.1.1" targetFramework="net472" />
+  <package id="RezaB.TurkTelekom.WebServices" version="1.2.0" targetFramework="net472" />
+  <package id="RezaB.Web.VPOS" version="1.1.2" targetFramework="net472" />
   <package id="SSH.NET" version="2020.0.0" targetFramework="net472" />
   <package id="System.Runtime" version="4.3.1" targetFramework="net472" />
   <package id="System.Runtime.Caching" version="5.0.0" targetFramework="net472" />
