--- a/RadiusR.API.Test_Unit/App.config
+++ b/RadiusR.API.Test_Unit/App.config
@@ -42,9 +42,19 @@
       <basicHttpBinding>
         <binding name="smsnnPortBinding" />
       </basicHttpBinding>
+      <wsHttpBinding>
+        <binding name="WSHttpBinding_IPartnerService">
+          <security mode="None" />
+        </binding>
+      </wsHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://soap.netgsm.com.tr:8080/Sms_webservis/SMS" binding="basicHttpBinding" bindingConfiguration="smsnnPortBinding" contract="NetGsm.smsnn" name="smsnnPort" />
+      <endpoint address="http://soap.netgsm.com.tr:8080/Sms_webservis/SMS"
+        binding="basicHttpBinding" bindingConfiguration="smsnnPortBinding"
+        contract="NetGsm.smsnn" name="smsnnPort" />
+      <endpoint address="http://localhost:56365/PartnerService.svc/PartnerService.svc"
+        binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IPartnerService"
+        contract="PartnerServiceReference.IPartnerService" name="WSHttpBinding_IPartnerService" />
     </client>
   </system.serviceModel>
   <runtime>
