--- a/RadiusR.API.Test_Unit/packages.config
+++ b/RadiusR.API.Test_Unit/packages.config
@@ -5,19 +5,25 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
-  <package id="NLog" version="4.5.6" targetFramework="net472" />
-  <package id="RadiusR.DB" version="1.2.3" targetFramework="net472" />
-  <package id="RadiusR.DB.DomainsCache" version="1.1.0" targetFramework="net472" />
-  <package id="RadiusR.DB.TelekomOperations" version="1.0.0" targetFramework="net472" />
-  <package id="RadiusR.DB.Utilities" version="1.1.0" targetFramework="net472" />
-  <package id="RadiusR.DB.Utilities.ComplexOperations" version="1.0.7" targetFramework="net472" />
-  <package id="RadiusR.Localization" version="1.0.4" targetFramework="net472" />
-  <package id="RadiusR.Localization.Lists" version="1.0.9" targetFramework="net472" />
-  <package id="RadiusR.Scheduler.SMS" version="1.0.0" targetFramework="net472" />
-  <package id="RadiusR.SMS" version="1.0.0" targetFramework="net472" />
-  <package id="RadiusR.SystemLogs" version="1.0.3" targetFramework="net472" />
-  <package id="RezaB.API.TCKValidation" version="1.0.0" targetFramework="net472" />
-  <package id="RezaB.Data" version="1.0.1" targetFramework="net472" />
+  <package id="NLog" version="4.7.6" targetFramework="net472" />
+  <package id="RadiusR.DB" version="1.2.4" targetFramework="net472" />
+  <package id="RadiusR.DB.DomainsCache" version="1.1.1" targetFramework="net472" />
+  <package id="RadiusR.DB.TelekomOperations" version="1.1.0" targetFramework="net472" />
+  <package id="RadiusR.DB.Utilities" version="1.1.1" targetFramework="net472" />
+  <package id="RadiusR.DB.Utilities.ComplexOperations" version="1.1.2" targetFramework="net472" />
+  <package id="RadiusR.FileManagement" version="1.1.6" targetFramework="net472" />
+  <package id="RadiusR.Localization" version="1.0.6" targetFramework="net472" />
+  <package id="RadiusR.Localization.Lists" version="1.0.11" targetFramework="net472" />
+  <package id="RadiusR.Scheduler.SMS" version="1.0.1" targetFramework="net472" />
+  <package id="RadiusR.SMS" version="1.0.1" targetFramework="net472" />
+  <package id="RadiusR.SystemLogs" version="1.0.7" targetFramework="net472" />
+  <package id="RezaB.API.TCKValidation" version="1.0.1" targetFramework="net472" />
+  <package id="RezaB.Data" version="1.0.2" targetFramework="net472" />
   <package id="RezaB.DBUtilities" version="1.0.0" targetFramework="net472" />
-  <package id="RezaB.TurkTelekom.WebServices" version="1.1.0" targetFramework="net472" />
+  <package id="RezaB.Files" version="1.0.1" targetFramework="net472" />
+  <package id="RezaB.Files.FTP" version="1.0.2" targetFramework="net472" />
+  <package id="RezaB.Files.Local" version="1.0.1" targetFramework="net472" />
+  <package id="RezaB.TurkTelekom.FTPOperations" version="1.1.1" targetFramework="net472" />
+  <package id="RezaB.TurkTelekom.WebServices" version="1.2.0" targetFramework="net472" />
+  <package id="SSH.NET" version="2020.0.0" targetFramework="net472" />
 </packages>
